FB-26 | Service | implement search inventory emplacements by keyword in rest api adapter
